# 524ind1

./: CONTRIBUTING.rst  LICENSE  README.md  pyproject.toml
524ind1/: 524ind1.py
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
tests/: test_524ind1.py
