[tool.poetry]
name = "524ind1"
version = "0.1.0"
description = "Toy package for practice"
authors = ["mgaroub <58850257+mgaroub@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.2.2"

[tool.poetry.dev-dependencies]


[build-system]
requires = ["poetry>=1.0.0"]
build-backend = "poetry.masonry.api"


